--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,6 @@ theme: concise
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/pomelojiang/pomelojiang.github.io.git
+  branch: master
