--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,13 @@ sitemap:
 baidusitemap:
   path: baidusitemap.xml
 
+# baidu主动推送
+baidu_url_submit:
+  count: 1 ## 提交最新的一个链接
+  host: pomelojiang.github.io ## 在百度站长平台中注册的域名
+  token: 1E4DHNRxM1WJ3dI3 ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -85,6 +92,8 @@ theme: concise
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
+- type: git
   repo: https://github.com/pomelojiang/pomelojiang.github.io.git
   branch: master
+#baidu主动推送
+- type: baidu_url_submitter
